fix broken CSS

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,10 +13,6 @@ a {
     text-decoration: none;
 }
 
-header {
-    padding-top: -40px;
-}
-
 header li {
     background: #674EA7;
     background: -moz-linear-gradient(top, #674EA7 0%, #3D2E64 100%);
@@ -40,5 +36,5 @@ header li:hover {
 }
 
 section {
-    width: 1000px;
+    width: 750px;
 }
